jobber-k8s/AWS/1-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobber-gateway
  namespace: bb-prod
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.jobberapp.xyz
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  type: ClusterIP
  selector:
    app: jobber-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
